added new cluster file to use 3 mons in different nodes and bumped osd count to 6
Signed-off-by: Tamil Muthamizhan <tmuthami@redhat.com>

--- a/qa/suites/smoke/basic/clusters/fixed3.yaml
+++ b/qa/suites/smoke/basic/clusters/fixed3.yaml
@@ -1,6 +1,6 @@
 roles:
-- [mon.a, mds.a, osd.0, osd.1]
-- [mon.b, mds.a-s, osd.2, osd.3]
+- [mon.a, mds.a, osd.0, osd.1, osd.2]
+- [mon.b, mds.a-s, osd.3, osd.4, osd.5]
 - [mon.c, client.0]
 openstack:
 - volumes: # attached to each instance
