--- a/qa/releases/luminous-with-mgr.yaml
+++ b/qa/releases/luminous-with-mgr.yaml
@@ -2,6 +2,7 @@ tasks:
 - exec:
     osd.0:
       - ceph osd set require_luminous_osds
+      - ceph osd set-require-min-compat-client luminous
 - ceph.healthy:
 overrides:
   ceph:
