--- a/qa/suites/smoke/basic/clusters/fixed3.yaml
+++ b/qa/suites/smoke/basic/clusters/fixed3.yaml
@@ -1,7 +1,7 @@
 roles:
 - [mon.a, mds.a, osd.0, osd.1, osd.2]
 - [mon.b, mds.a-s, osd.3, osd.4, osd.5]
-- [mon.c, client.0]
+- [mon.c, osd.6, osd.7, osd.8, client.0]
 openstack:
 - volumes: # attached to each instance
     count: 2
