restful: Use fixed cert/pkey files
This allows users to create their own certificates that are signed by a
CA. If the keys are not present then a self-signed certificate will be
created and distributed amongst all the mgr nodes.

It also allows us to get rid of the pyOpenSSL dependency.

Signed-off-by: Boris Ranto <branto@redhat.com>

--- a/debian/control
+++ b/debian/control
@@ -161,9 +161,8 @@ Description: debugging symbols for ceph-mds
 Package: ceph-mgr
 Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
-         python-openssl
-         python-pecan
-         python-werkzeug
+         python-pecan,
+         python-werkzeug,
          ${misc:Depends},
          ${python:Depends},
 	 python-cherrypy3,
