--- a/qa/suites/smoke/basic/clusters/fixed3.yaml
+++ b/qa/suites/smoke/basic/clusters/fixed3.yaml
@@ -3,8 +3,8 @@ os_version: "16.04"
 
 roles:
 - [mon.a, mds.a, osd.0, osd.1, osd.2]
-- [mon.b, osd.3, osd.4, osd.5]
-- [mon.c, osd.6, osd.7, osd.8]
+- [mon.b, mgr.x, osd.3, osd.4, osd.5]
+- [mon.c, mgr.y, osd.6, osd.7, osd.8]
 - [client.0]
 
 openstack:
