--- a/qa/suites/rados/thrash-erasure-code-big/thrashers/pggrow.yaml
+++ b/qa/suites/rados/thrash-erasure-code-big/thrashers/pggrow.yaml
@@ -1,6 +1,5 @@
-tasks:
-- install:
-- ceph:
+overrides:
+  ceph:
     log-whitelist:
     - wrongly marked me down
     - objects unfound and apparently lost
@@ -8,6 +7,7 @@ tasks:
       osd:
         osd scrub min interval: 60
         osd scrub max interval: 120
+tasks:
 - thrashosds:
     timeout: 1200
     chance_pgnum_grow: 2
