--- a/qa/suites/fs/multiclient/tasks/cephfs_misc_tests.yaml
+++ b/qa/suites/fs/multiclient/tasks/cephfs_misc_tests.yaml
@@ -2,3 +2,8 @@ tasks:
 - cephfs_test_runner:
     modules:
       - tasks.cephfs.test_misc
+
+overrides:
+  ceph:
+    log-whitelist:
+      - evicting unresponsive client
