ceph.spec.in, debian/control: build/runtime dependency for cherrypy
Signed-off-by: Dan Mick <dan.mick@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -152,6 +152,7 @@ BuildRequires:	keyutils-devel
 BuildRequires:  libopenssl-devel
 BuildRequires:  lsb-release
 BuildRequires:  openldap2-devel
+BuildRequires:	python-CherryPy
 BuildRequires:	python-Cython
 BuildRequires:	python-Sphinx
 %endif
@@ -165,6 +166,7 @@ BuildRequires:  openldap-devel
 BuildRequires:  openssl-devel
 BuildRequires:  redhat-lsb-core
 BuildRequires:	Cython
+BuildRequires:	python-cherrypy
 BuildRequires:	python-sphinx
 %endif
 # python34-... for RHEL, python3-... for all other supported distros
@@ -309,6 +311,12 @@ License:        LGPL-2.1 and CC-BY-SA-1.0 and GPL-2.0 and BSL-1.0 and GPL-2.0-wi
 Group:          System/Filesystems
 %endif
 Requires:       ceph-base = %{epoch}:%{version}-%{release}
+%if 0%{?fedora} || 0%{?rhel}
+Requires:      python-cherrypy
+%endif
+%if 0%{?suse_version}
+Requires: 	python-CherryPy
+%endif
 
 %description mgr
 ceph-mgr enables python modules that provide services (such as the REST
