--- a/debian/control
+++ b/debian/control
@@ -163,6 +163,7 @@ Architecture: linux-any
 Depends: ceph-base (= ${binary:Version}),
          python-pecan,
          python-werkzeug,
+         openssl,
          ${misc:Depends},
          ${python:Depends},
 	 python-cherrypy3,
