debian,rpm: add jq dependency to ceph-test
Signed-off-by: Kefu Chai <kchai@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -695,6 +695,7 @@ Group:		System/Benchmark
 License:	LGPL-2.0
 Requires:	ceph-common
 Requires:	xmlstarlet
+Requires:	jq
 %description -n ceph-test
 This package contains Ceph benchmarks and test tools.
 %endif
