--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -133,7 +133,6 @@ BuildRequires:	xfsprogs
 BuildRequires:	xfsprogs-devel
 BuildRequires:	xmlstarlet
 BuildRequires:	yasm
-BuildRequires:	libibverbs-devel
 
 #################################################################################
 # distro-conditional dependencies
@@ -155,6 +154,7 @@ BuildRequires:  openldap2-devel
 BuildRequires:	python-CherryPy
 BuildRequires:	python-Cython
 BuildRequires:	python-Sphinx
+BuildRequires:  rdma-core-devel
 %endif
 %if 0%{?fedora} || 0%{?rhel} 
 Requires:	systemd
@@ -162,6 +162,7 @@ BuildRequires:  boost-random
 BuildRequires:	btrfs-progs
 BuildRequires:	nss-devel
 BuildRequires:	keyutils-libs-devel
+BuildRequires:	libibverbs-devel
 BuildRequires:  openldap-devel
 BuildRequires:  openssl-devel
 BuildRequires:  redhat-lsb-core
