--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -122,7 +122,6 @@ BuildRequires:	pkgconfig
 BuildRequires:	python
 BuildRequires:	python-devel
 BuildRequires:	python-nose
-BuildRequires:	python-prettytable
 BuildRequires:	python-requests
 BuildRequires:	python-virtualenv
 BuildRequires:	snappy-devel
@@ -153,6 +152,7 @@ BuildRequires:  lsb-release
 BuildRequires:  openldap2-devel
 BuildRequires:	python-CherryPy
 BuildRequires:	python-Cython
+BuildRequires:	python-PrettyTable
 BuildRequires:	python-Sphinx
 BuildRequires:  rdma-core-devel
 %endif
@@ -168,6 +168,7 @@ BuildRequires:  openssl-devel
 BuildRequires:  redhat-lsb-core
 BuildRequires:	Cython
 BuildRequires:	python-cherrypy
+BuildRequires:	python-prettytable
 BuildRequires:	python-sphinx
 %endif
 # python34-... for RHEL, python3-... for all other supported distros
@@ -262,7 +263,12 @@ Requires:	python-rados = %{epoch}:%{version}-%{release}
 Requires:	python-rbd = %{epoch}:%{version}-%{release}
 Requires:	python-cephfs = %{epoch}:%{version}-%{release}
 Requires:	python-rgw = %{epoch}:%{version}-%{release}
+%if 0%{?fedora} || 0%{?rhel}
 Requires:	python-prettytable
+%endif
+%if 0%{?suse_version}
+Requires:	python-PrettyTable
+%endif
 Requires:	python-requests
 %{?systemd_requires}
 %if 0%{?suse_version}
