build/ops: rpm: move python-prettytable to distro-conditional section
The correct package name in SUSE is python-PrettyTable

Signed-off-by: Nathan Cutler <ncutler@suse.com>
(cherry picked from commit 08bc5e6528c9090ee90652b3d9746c64dc41dff7)

Conflicts:
	ceph.spec.in (no python-CherryPy downstream, yet)

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -129,7 +129,6 @@ BuildRequires:  procps
 BuildRequires:	python
 BuildRequires:	python-devel
 BuildRequires:	python-nose
-BuildRequires:	python-prettytable
 BuildRequires:	python-requests
 BuildRequires:	python-virtualenv
 BuildRequires:	snappy-devel
@@ -159,6 +158,7 @@ BuildRequires:  libopenssl-devel
 BuildRequires:  lsb-release
 BuildRequires:  openldap2-devel
 BuildRequires:	python-Cython
+BuildRequires:	python-PrettyTable
 BuildRequires:	python-Sphinx
 BuildRequires:  rdma-core-devel
 %endif
@@ -173,6 +173,7 @@ BuildRequires:  openldap-devel
 BuildRequires:  openssl-devel
 BuildRequires:  redhat-lsb-core
 BuildRequires:	Cython
+BuildRequires:	python-prettytable
 BuildRequires:	python-sphinx
 %endif
 # python34-... for RHEL, python3-... for all other supported distros
@@ -267,7 +268,12 @@ Requires:	python-rados = %{epoch}:%{version}-%{release}
 Requires:	python-rbd = %{epoch}:%{version}-%{release}
 Requires:	python-cephfs = %{epoch}:%{version}-%{release}
 Requires:	python-rgw = %{epoch}:%{version}-%{release}
+%if 0%{?fedora} || 0%{?rhel}
 Requires:	python-prettytable
+%endif
+%if 0%{?suse_version}
+Requires:	python-PrettyTable
+%endif
 Requires:	python-requests
 %{?systemd_requires}
 %if 0%{?suse_version}
