--- a/qa/suites/rbd/openstack/workloads/devstack-tempest-gate.yaml
+++ b/qa/suites/rbd/openstack/workloads/devstack-tempest-gate.yaml
@@ -26,6 +26,10 @@ tasks:
             - "ALL=(root) NOPASSWD:/usr/bin/ovsdb-client"
       - |
         #!/bin/bash -ex
+        wget -q -O- "http://git.ceph.com/?p=ceph.git;a=blob_plain;f=keys/autobuild.asc" | apt-key add -
+        wget -q -O /etc/apt/sources.list.d/ceph.list "https://shaman.ceph.com/api/repos/ceph/{ceph_branch}/{ceph_sha1}/ubuntu/xenial/repo"
+        apt-get update
+
         mount --bind /mnt/test_b /opt
         mkdir /opt/stack
         chown -R stack:stack /home/stack
