build/ops: completely disable build of dmclock tests
These tests do not build on OBS and upstream is dropping them.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -876,14 +876,11 @@ add_subdirectory(tools)
 # dmClock
 
 add_subdirectory(dmclock) # after gmock
-add_dependencies(tests dmclock-tests dmclock-data-struct-tests)
 
-if(WITH_TESTS)
-  install(PROGRAMS
-    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/dmclock-tests
-    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/dmclock-data-struct-tests
-    DESTINATION bin)
-endif(WITH_TESTS)
+if(WITH_DMCLOCK_TESTS)
+  add_subdirectory(dmclock/test)
+  add_subdirectory(dmclock/support/test)
+endif(WITH_DMCLOCK_TESTS)
 
 if(HAVE_INTEL)
   add_subdirectory(crypto/isa-l)
