--- a/src/dmclock/CMakeLists.txt
+++ b/src/dmclock/CMakeLists.txt
@@ -16,10 +16,12 @@ if(K_WAY_HEAP)
   endif()
 endif()
 
-if (NOT(TARGET gtest AND TARGET gtest_main))
-  find_package(gtest REQUIRED)
-  include_directories(${GTEST_INCLUDE_DIRS})
-endif()
+if(WITH_DMCLOCK_TESTS)
+  if(NOT(TARGET gtest AND TARGET gtest_main))
+    find_package(gtest REQUIRED)
+    include_directories(${GTEST_INCLUDE_DIRS})
+  endif(NOT(TARGET gtest AND TARGET gtest_main))
+endif(WITH_DMCLOCK_TESTS)
 
 find_package(Boost REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
@@ -28,5 +30,7 @@ add_subdirectory(src)
 add_subdirectory(sim)
 add_subdirectory(support)
 
-enable_testing()
-add_subdirectory(test)
+if(WITH_DMCLOCK_TESTS)
+  enable_testing()
+  add_subdirectory(test)
+endif(WITH_DMCLOCK_TESTS)
