--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -744,7 +744,7 @@ This package contains the Java libraries for the Ceph File System.
 Summary:        RADOS object class development kit
 Group:          Development/Libraries
 License:        LGPL-2.0
-Requires:       librados2-devel = %{epoch}:%{version}-%{release}
+Requires:       librados2-devel = %{version}-%{release}
 %description -n rados-objclass-devel
 This package contains libraries and headers needed to develop RADOS object
 class plugins.
