cmake: build boost::context and coroutine only with rgw Beast frontend
boost::context is currently (1.63) unsupported for s390x and anyway
it makes sense to conditionalize Boost components so they are only
built with the Ceph components that need them (like is already being
done for mgr).

Fixes: http://tracker.ceph.com/issues/20048
Signed-off-by: Nathan Cutler <ncutler@suse.com>
Signed-off-by: Tim Serong <tserong@suse.com>
Signed-off-by: Casey Bodley <cbodley@redhat.com>
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit c760be1df40a9b777a93268c74b37ddea00b51ab)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -513,8 +513,9 @@ endif()
 # Boost
 option(WITH_SYSTEM_BOOST "require and build with system Boost" OFF)
 
+# Boost::thread depends on Boost::atomic, so list it explicitly.
 set(BOOST_COMPONENTS
-	thread system regex random program_options date_time iostreams coroutine)
+  atomic thread system regex random program_options date_time iostreams)
 set(BOOST_HEADER_COMPONENTS container)
 
 if(WITH_MGR)
@@ -522,7 +523,7 @@ if(WITH_MGR)
 endif()
 
 if(WITH_RADOSGW_BEAST_FRONTEND)
-	list(APPEND BOOST_COMPONENTS context)
+  list(APPEND BOOST_COMPONENTS context coroutine)
 endif()
 
 if (WITH_SYSTEM_BOOST)
