build/ops: rpm: make librbd1 %post scriptlet depend on coreutils
Fixes: http://tracker.ceph.com/issues/20052
Signed-off-by: Giacomo Comes <comes@naic.edu>
Signed-off-by: Nathan Cutler <ncutler@suse.com>
(cherry picked from commit 88ac9daaf183bbecef721a737c3743f377156ff8)

Conflicts:
	ceph.spec.in (trivial resolution)

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -554,6 +554,9 @@ Group:		System/Libraries
 %endif
 License:	LGPL-2.0
 Requires:	librados2 = %{version}-%{release}
+%if 0%{?suse_version}
+Requires(post): coreutils
+%endif
 %if 0%{?rhel} || 0%{?fedora}
 Obsoletes:	ceph-libs < %{version}-%{release}
 %endif
