Make change so dmclock tests are not built unless WITH_TESTS and WITH_DMCLOCK_TESTS are both set. This is so openSUSE Leap will build correctly.
Signed-off-by: J. Eric Ivancich <ivancich@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -874,12 +874,16 @@ add_subdirectory(tools)
 # dmClock (after gmock)
 
 add_subdirectory(dmclock/src)
-if(WITH_TESTS)
+
+option(WITH_DMCLOCK_TESTS
+  "enable the build of dmclock-tests and dmclock-data-struct tests binaries"
+  OFF)
+if(WITH_TESTS AND WITH_DMCLOCK_TESTS)
   # note: add_test is not being called, so dmclock tests aren't part
   # of ceph tests
   add_subdirectory(dmclock/test)
   add_subdirectory(dmclock/support/test)
-endif(WITH_TESTS)
+endif(WITH_TESTS AND WITH_DMCLOCK_TESTS)
 
 if(HAVE_INTEL)
   add_subdirectory(crypto/isa-l)
