--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -23,11 +23,10 @@
 %endif
 %bcond_with make_check
 %bcond_with xio
-%ifnarch s390 s390x
-%bcond_without tcmalloc
-%else
-# no gperftools/tcmalloc on s390(x)
+%ifarch s390 s390x
 %bcond_with tcmalloc
+%else
+%bcond_without tcmalloc
 %endif
 %bcond_with lowmem_builder
 %if 0%{?fedora} || 0%{?rhel}
