--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -857,6 +857,11 @@ cmake .. \
 %if 0%{with ocf}
     -DWITH_OCF=ON \
 %endif
+%ifarch aarch64 armv7hl mips mipsel ppc ppc64 ppc64le %{ix86} x86_64
+    -DWITH_RADOSGW_BEAST_FRONTEND=ON \
+%else
+    -DWITH_RADOSGW_BEAST_FRONTEND=OFF \
+%endif
     -DBOOST_J=%{_smp_ncpus}
 
 make %{?_smp_mflags}
