build/ops: rpm: no rgw Beast frontend on s390x
Since the Beast frontend uses boost::context which is not supported on
s390x.

Signed-off-by: Nathan Cutler <ncutler@suse.com>
(cherry picked from commit 84e80b74cf6320d50eea879131a34482f597c366)

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -24,8 +24,10 @@
 %bcond_with xio
 %ifarch s390 s390x
 %bcond_with tcmalloc
+%bcond_with rgw_beast
 %else
 %bcond_without tcmalloc
+%bcond_without rgw_beast
 %endif
 %bcond_without lowmem_builder
 %bcond_with minimal_debugging_information
@@ -867,6 +869,11 @@ cmake .. \
     $CEPH_EXTRA_CMAKE_ARGS \
 %if 0%{with ocf}
     -DWITH_OCF=ON \
+%endif
+%if 0%{with rgw_beast}
+    -DWITH_RADOSGW_BEAST_FRONTEND=ON \
+%else
+    -DWITH_RADOSGW_BEAST_FRONTEND=OFF \
 %endif
     -DBOOST_J=%{_smp_ncpus}
 
