--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -880,7 +880,7 @@ cmake .. \
 %if 0%{with ocf}
     -DWITH_OCF=ON \
 %endif
-%if 0%{with rgw_beast}
+%ifarch aarch64 armv7hl mips mipsel ppc ppc64 ppc64le %{ix86} x86_64
     -DWITH_RADOSGW_BEAST_FRONTEND=ON \
 %else
     -DWITH_RADOSGW_BEAST_FRONTEND=OFF \
