--- a/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
@@ -6,8 +6,8 @@ tasks:
     conf:
       osd:
 # we may land on ext4
-        osd max object name len = 400
-        osd max object namespace len = 64
+        osd max object name len: 400
+        osd max object namespace len: 64
 - workunit:
     clients:
       all:
