--- a/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
+++ b/qa/suites/rados/singleton-nomsgr/all/health-warnings.yaml
@@ -8,6 +8,8 @@ tasks:
 # we may land on ext4
         osd max object name len: 400
         osd max object namespace len: 64
+    log-whitelist:
+      - wrongly marked me down
 - workunit:
     clients:
       all:
