--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -66,12 +66,19 @@
 
 # disable dwz which compresses the debuginfo
 %global _find_debuginfo_dwz_opts %{nil}
+
+# define %_epoch_prefix macro which will expand to the empty string if %epoch is undefined
+%global _epoch_prefix %{?epoch:%{epoch}:}
+
 #################################################################################
 # main package definition
 #################################################################################
 Name:		ceph
 Version:	@VERSION@
 Release:	@RPM_RELEASE@%{?dist}
+%if 0%{?fedora} || 0%{?rhel}
+Epoch:		1
+%endif
 Summary:	User space components of the Ceph file system
 License:	LGPL-2.1 and CC-BY-SA-1.0 and GPL-2.0 and BSL-1.0 and GPL-2.0 WITH Autoconf-exception-2.0 and BSD-3-Clause and MIT
 %if 0%{?suse_version}
@@ -90,10 +97,10 @@ ExclusiveArch:  x86_64 aarch64 ppc64le s390x
 #################################################################################
 # dependencies that apply across all distro families
 #################################################################################
-Requires:       ceph-osd = %{version}-%{release}
-Requires:       ceph-mds = %{version}-%{release}
-Requires:       ceph-mgr = %{version}-%{release}
-Requires:       ceph-mon = %{version}-%{release}
+Requires:       ceph-osd = %{_epoch_prefix}%{version}-%{release}
+Requires:       ceph-mds = %{_epoch_prefix}%{version}-%{release}
+Requires:       ceph-mgr = %{_epoch_prefix}%{version}-%{release}
+Requires:       ceph-mon = %{_epoch_prefix}%{version}-%{release}
 Requires(post):	binutils
 %if 0%{with cephfs_java}
 BuildRequires:	java-devel
@@ -228,13 +235,13 @@ Summary:       Ceph Base Package
 %if 0%{?suse_version}
 Group:         System/Filesystems
 %endif
-Requires:      ceph-common = %{version}-%{release}
-Requires:      librbd1 = %{version}-%{release}
-Requires:      librados2 = %{version}-%{release}
-Requires:      libcephfs2 = %{version}-%{release}
-Requires:      librgw2 = %{version}-%{release}
+Requires:      ceph-common = %{_epoch_prefix}%{version}-%{release}
+Requires:      librbd1 = %{_epoch_prefix}%{version}-%{release}
+Requires:      librados2 = %{_epoch_prefix}%{version}-%{release}
+Requires:      libcephfs2 = %{_epoch_prefix}%{version}-%{release}
+Requires:      librgw2 = %{_epoch_prefix}%{version}-%{release}
 %if 0%{with selinux}
-Requires:      ceph-selinux = %{version}-%{release}
+Requires:      ceph-selinux = %{_epoch_prefix}%{version}-%{release}
 %endif
 Requires:      python
 Requires:      python-requests
@@ -261,13 +268,13 @@ Summary:	Ceph Common
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	librbd1 = %{version}-%{release}
-Requires:	librados2 = %{version}-%{release}
-Requires:	libcephfs2 = %{version}-%{release}
-Requires:	python-rados = %{version}-%{release}
-Requires:	python-rbd = %{version}-%{release}
-Requires:	python-cephfs = %{version}-%{release}
-Requires:	python-rgw = %{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	libcephfs2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rados = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rbd = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-cephfs = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rgw = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?fedora} || 0%{?rhel}
 Requires:	python-prettytable
 %endif
@@ -292,7 +299,7 @@ Summary:	Ceph Metadata Server Daemon
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-base = %{version}-%{release}
+Requires:	ceph-base = %{_epoch_prefix}%{version}-%{release}
 %description mds
 ceph-mds is the metadata server daemon for the Ceph distributed file system.
 One or more instances of ceph-mds collectively manage the file system
@@ -303,7 +310,7 @@ Summary:	Ceph Monitor Daemon
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-base = %{version}-%{release}
+Requires:	ceph-base = %{_epoch_prefix}%{version}-%{release}
 # For ceph-rest-api
 %if 0%{?fedora} || 0%{?rhel}
 Requires:      python-flask
@@ -323,7 +330,7 @@ License:        LGPL-2.1 and CC-BY-SA-1.0 and GPL-2.0 and BSL-1.0 and GPL-2.0-wi
 %if 0%{?suse_version}
 Group:          System/Filesystems
 %endif
-Requires:       ceph-base = %{version}-%{release}
+Requires:       ceph-base = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?fedora} || 0%{?rhel}
 Requires:	python-cherrypy
 %endif
@@ -350,8 +357,8 @@ Summary:	Ceph fuse-based client
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	librados2 = %{version}-%{release}
-Requires:	librbd1 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
 %description -n rbd-fuse
 FUSE based client to map Ceph rbd images to files
 
@@ -360,8 +367,8 @@ Summary:	Ceph daemon for mirroring RBD images
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-common = %{version}-%{release}
-Requires:	librados2 = %{version}-%{release}
+Requires:	ceph-common = %{_epoch_prefix}%{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
 %description -n rbd-mirror
 Daemon for mirroring RBD images between Ceph clusters, streaming
 changes asynchronously.
@@ -371,8 +378,8 @@ Summary:	Ceph RBD client base on NBD
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	librados2 = %{version}-%{release}
-Requires:	librbd1 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
 %description -n rbd-nbd
 NBD based client to map Ceph rbd images to local device
 
@@ -381,12 +388,12 @@ Summary:	Rados REST gateway
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-common = %{version}-%{release}
+Requires:	ceph-common = %{_epoch_prefix}%{version}-%{release}
 %if 0%{with selinux}
-Requires:	ceph-selinux = %{version}-%{release}
+Requires:	ceph-selinux = %{_epoch_prefix}%{version}-%{release}
 %endif
-Requires:	librados2 = %{version}-%{release}
-Requires:	librgw2 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librgw2 = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?rhel} || 0%{?fedora}
 Requires:	mailcap
 %endif
@@ -403,7 +410,7 @@ Summary:	OCF-compliant resource agents for Ceph daemons
 Group:		System/Filesystems
 %endif
 License:	LGPL-2.0
-Requires:	ceph-base = %{version}
+Requires:	ceph-base = %{_epoch_prefix}%{version}
 Requires:	resource-agents
 %description resource-agents
 Resource agents for monitoring and managing Ceph daemons
@@ -416,7 +423,7 @@ Summary:	Ceph Object Storage Daemon
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-base = %{version}-%{release}
+Requires:	ceph-base = %{_epoch_prefix}%{version}-%{release}
 # for sgdisk, used by ceph-disk
 %if 0%{?fedora} || 0%{?rhel}
 Requires:	gdisk
@@ -437,7 +444,7 @@ Group:		System/Libraries
 %endif
 License:	LGPL-2.0
 %if 0%{?rhel} || 0%{?fedora}
-Obsoletes:	ceph-libs < %{version}-%{release}
+Obsoletes:	ceph-libs < %{_epoch_prefix}%{version}-%{release}
 %endif
 %description -n librados2
 RADOS is a reliable, autonomic distributed object storage cluster
@@ -451,10 +458,10 @@ Summary:	RADOS headers
 Group:		Development/Libraries/C and C++
 %endif
 License:	LGPL-2.0
-Requires:	librados2 = %{version}-%{release}
-Obsoletes:	ceph-devel < %{version}-%{release}
-Provides:	librados2-devel = %{version}-%{release}
-Obsoletes:	librados2-devel < %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	ceph-devel < %{_epoch_prefix}%{version}-%{release}
+Provides:	librados2-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	librados2-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n librados-devel
 This package contains libraries and headers needed to develop programs
 that use RADOS object store.
@@ -465,7 +472,7 @@ Summary:	RADOS gateway client library
 Group:		System/Libraries
 %endif
 License:	LGPL-2.0
-Requires:	librados2 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
 %description -n librgw2
 This package provides a library implementation of the RADOS gateway
 (distributed object store with S3 and Swift personalities).
@@ -476,10 +483,10 @@ Summary:	RADOS gateway client library
 Group:		Development/Libraries/C and C++
 %endif
 License:	LGPL-2.0
-Requires:	librados-devel = %{version}-%{release}
-Requires:	librgw2 = %{version}-%{release}
-Provides:	librgw2-devel = %{version}-%{release}
-Obsoletes:	librgw2-devel < %{version}-%{release}
+Requires:	librados-devel = %{_epoch_prefix}%{version}-%{release}
+Requires:	librgw2 = %{_epoch_prefix}%{version}-%{release}
+Provides:	librgw2-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	librgw2-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n librgw-devel
 This package contains libraries and headers needed to develop programs
 that use RADOS gateway client library.
@@ -490,9 +497,9 @@ Summary:	Python 2 libraries for the RADOS gateway
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	librgw2 = %{version}-%{release}
-Requires:	python-rados = %{version}-%{release}
-Obsoletes:	python-ceph < %{version}-%{release}
+Requires:	librgw2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rados = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	python-ceph < %{_epoch_prefix}%{version}-%{release}
 %description -n python-rgw
 This package contains Python 2 libraries for interacting with Cephs RADOS
 gateway.
@@ -503,8 +510,8 @@ Summary:	Python 3 libraries for the RADOS gateway
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	librgw2 = %{version}-%{release}
-Requires:	python%{python3_pkgversion}-rados = %{version}-%{release}
+Requires:	librgw2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python%{python3_pkgversion}-rados = %{_epoch_prefix}%{version}-%{release}
 %description -n python%{python3_pkgversion}-rgw
 This package contains Python 3 libraries for interacting with Cephs RADOS
 gateway.
@@ -515,8 +522,8 @@ Summary:	Python 2 libraries for the RADOS object store
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	librados2 = %{version}-%{release}
-Obsoletes:	python-ceph < %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	python-ceph < %{_epoch_prefix}%{version}-%{release}
 %description -n python-rados
 This package contains Python 2 libraries for interacting with Cephs RADOS
 object store.
@@ -528,7 +535,7 @@ Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
 Requires:	python%{python3_pkgversion}
-Requires:	librados2 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
 %description -n python%{python3_pkgversion}-rados
 This package contains Python 3 libraries for interacting with Cephs RADOS
 object store.
@@ -539,7 +546,7 @@ Summary:	RADOS striping interface
 Group:		System/Libraries
 %endif
 License:	LGPL-2.0
-Requires:	librados2 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
 %description -n libradosstriper1
 Striping interface built on top of the rados library, allowing
 to stripe bigger objects onto several standard rados objects using
@@ -551,11 +558,11 @@ Summary:	RADOS striping interface headers
 Group:		Development/Libraries/C and C++
 %endif
 License:	LGPL-2.0
-Requires:	libradosstriper1 = %{version}-%{release}
-Requires:	librados-devel = %{version}-%{release}
-Obsoletes:	ceph-devel < %{version}-%{release}
-Provides:	libradosstriper1-devel = %{version}-%{release}
-Obsoletes:	libradosstriper1-devel < %{version}-%{release}
+Requires:	libradosstriper1 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librados-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	ceph-devel < %{_epoch_prefix}%{version}-%{release}
+Provides:	libradosstriper1-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	libradosstriper1-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n libradosstriper-devel
 This package contains libraries and headers needed to develop programs
 that use RADOS striping interface.
@@ -566,12 +573,12 @@ Summary:	RADOS block device client library
 Group:		System/Libraries
 %endif
 License:	LGPL-2.0
-Requires:	librados2 = %{version}-%{release}
+Requires:	librados2 = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?suse_version}
 Requires(post): coreutils
 %endif
 %if 0%{?rhel} || 0%{?fedora}
-Obsoletes:	ceph-libs < %{version}-%{release}
+Obsoletes:	ceph-libs < %{_epoch_prefix}%{version}-%{release}
 %endif
 %description -n librbd1
 RBD is a block device striped across multiple distributed objects in
@@ -585,11 +592,11 @@ Summary:	RADOS block device headers
 Group:		Development/Libraries/C and C++
 %endif
 License:	LGPL-2.0
-Requires:	librbd1 = %{version}-%{release}
-Requires:	librados-devel = %{version}-%{release}
-Obsoletes:	ceph-devel < %{version}-%{release}
-Provides:	librbd1-devel = %{version}-%{release}
-Obsoletes:	librbd1-devel < %{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librados-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	ceph-devel < %{_epoch_prefix}%{version}-%{release}
+Provides:	librbd1-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	librbd1-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n librbd-devel
 This package contains libraries and headers needed to develop programs
 that use RADOS block device.
@@ -600,9 +607,9 @@ Summary:	Python 2 libraries for the RADOS block device
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	librbd1 = %{version}-%{release}
-Requires:	python-rados = %{version}-%{release}
-Obsoletes:	python-ceph < %{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rados = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	python-ceph < %{_epoch_prefix}%{version}-%{release}
 %description -n python-rbd
 This package contains Python 2 libraries for interacting with Cephs RADOS
 block device.
@@ -613,8 +620,8 @@ Summary:	Python 3 libraries for the RADOS block device
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	librbd1 = %{version}-%{release}
-Requires:	python%{python3_pkgversion}-rados = %{version}-%{release}
+Requires:	librbd1 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python%{python3_pkgversion}-rados = %{_epoch_prefix}%{version}-%{release}
 %description -n python%{python3_pkgversion}-rbd
 This package contains Python 3 libraries for interacting with Cephs RADOS
 block device.
@@ -626,7 +633,7 @@ Group:		System/Libraries
 %endif
 License:	LGPL-2.0
 %if 0%{?rhel} || 0%{?fedora}
-Obsoletes:	ceph-libs < %{version}-%{release}
+Obsoletes:	ceph-libs < %{_epoch_prefix}%{version}-%{release}
 Obsoletes:	ceph-libcephfs
 %endif
 %description -n libcephfs2
@@ -641,11 +648,11 @@ Summary:	Ceph distributed file system headers
 Group:		Development/Libraries/C and C++
 %endif
 License:	LGPL-2.0
-Requires:	libcephfs2 = %{version}-%{release}
-Requires:	librados-devel = %{version}-%{release}
-Obsoletes:	ceph-devel < %{version}-%{release}
-Provides:	libcephfs2-devel = %{version}-%{release}
-Obsoletes:	libcephfs2-devel < %{version}-%{release}
+Requires:	libcephfs2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	librados-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	ceph-devel < %{_epoch_prefix}%{version}-%{release}
+Provides:	libcephfs2-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	libcephfs2-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n libcephfs-devel
 This package contains libraries and headers needed to develop programs
 that use Cephs distributed file system.
@@ -656,11 +663,11 @@ Summary:	Python 2 libraries for Ceph distributed file system
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	libcephfs2 = %{version}-%{release}
+Requires:	libcephfs2 = %{_epoch_prefix}%{version}-%{release}
 %if 0%{?suse_version}
-Recommends:	python-rados = %{version}-%{release}
+Recommends: python-rados = %{_epoch_prefix}%{version}-%{release}
 %endif
-Obsoletes:	python-ceph < %{version}-%{release}
+Obsoletes:	python-ceph < %{_epoch_prefix}%{version}-%{release}
 %description -n python-cephfs
 This package contains Python 2 libraries for interacting with Cephs distributed
 file system.
@@ -671,8 +678,8 @@ Summary:	Python 3 libraries for Ceph distributed file system
 Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
-Requires:	libcephfs2 = %{version}-%{release}
-Requires:	python%{python3_pkgversion}-rados = %{version}-%{release}
+Requires:	libcephfs2 = %{_epoch_prefix}%{version}-%{release}
+Requires:	python%{python3_pkgversion}-rados = %{_epoch_prefix}%{version}-%{release}
 %description -n python%{python3_pkgversion}-cephfs
 This package contains Python 3 libraries for interacting with Cephs distributed
 file system.
@@ -711,7 +718,7 @@ Group:		System/Libraries
 %endif
 License:	LGPL-2.0
 Requires:	java
-Requires:	libcephfs2 = %{version}-%{release}
+Requires:	libcephfs2 = %{_epoch_prefix}%{version}-%{release}
 %description -n libcephfs_jni1
 This package contains the Java Native Interface library for CephFS Java
 bindings.
@@ -723,10 +730,10 @@ Group:		Development/Libraries/Java
 %endif
 License:	LGPL-2.0
 Requires:	java
-Requires:	libcephfs_jni1 = %{version}-%{release}
-Obsoletes:	ceph-devel < %{version}-%{release}
-Provides:	libcephfs_jni1-devel = %{version}-%{release}
-Obsoletes:	libcephfs_jni1-devel < %{version}-%{release}
+Requires:	libcephfs_jni1 = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	ceph-devel < %{_epoch_prefix}%{version}-%{release}
+Provides:	libcephfs_jni1-devel = %{_epoch_prefix}%{version}-%{release}
+Obsoletes:	libcephfs_jni1-devel < %{_epoch_prefix}%{version}-%{release}
 %description -n libcephfs_jni-devel
 This package contains the development files for CephFS Java Native Interface
 library.
@@ -738,7 +745,7 @@ Group:		System/Libraries
 %endif
 License:	LGPL-2.0
 Requires:	java
-Requires:	libcephfs_jni1 = %{version}-%{release}
+Requires:	libcephfs_jni1 = %{_epoch_prefix}%{version}-%{release}
 Requires:       junit
 BuildRequires:  junit
 %description -n cephfs-java
@@ -750,7 +757,7 @@ This package contains the Java libraries for the Ceph File System.
 Summary:        RADOS object class development kit
 Group:          Development/Libraries
 License:        LGPL-2.0
-Requires:       librados2-devel = %{version}-%{release}
+Requires:       librados2-devel = %{_epoch_prefix}%{version}-%{release}
 %description -n rados-objclass-devel
 This package contains libraries and headers needed to develop RADOS object
 class plugins.
@@ -762,7 +769,7 @@ Summary:	SELinux support for Ceph MON, OSD and MDS
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	ceph-base = %{version}-%{release}
+Requires:	ceph-base = %{_epoch_prefix}%{version}-%{release}
 Requires:	policycoreutils, libselinux-utils
 Requires(post): selinux-policy-base >= %{_selinux_policy_version}, policycoreutils, gawk
 Requires(postun): policycoreutils
@@ -780,10 +787,10 @@ Group:		Development/Languages/Python
 %endif
 License:	LGPL-2.0
 Obsoletes:	python-ceph
-Requires:	python-rados = %{version}-%{release}
-Requires:	python-rbd = %{version}-%{release}
-Requires:	python-cephfs = %{version}-%{release}
-Requires:	python-rgw = %{version}-%{release}
+Requires:	python-rados = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rbd = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-cephfs = %{_epoch_prefix}%{version}-%{release}
+Requires:	python-rgw = %{_epoch_prefix}%{version}-%{release}
 Provides:	python-ceph
 %description -n python-ceph-compat
 This is a compatibility package to accommodate python-ceph split into
