ceph.spec.in: re-drop %{epoch}: prefixes
Don't know how these crept back in.

Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -264,13 +264,13 @@ Summary:	Ceph Common
 %if 0%{?suse_version}
 Group:		System/Filesystems
 %endif
-Requires:	librbd1 = %{epoch}:%{version}-%{release}
-Requires:	librados2 = %{epoch}:%{version}-%{release}
-Requires:	libcephfs2 = %{epoch}:%{version}-%{release}
-Requires:	python-rados = %{epoch}:%{version}-%{release}
-Requires:	python-rbd = %{epoch}:%{version}-%{release}
-Requires:	python-cephfs = %{epoch}:%{version}-%{release}
-Requires:	python-rgw = %{epoch}:%{version}-%{release}
+Requires:	librbd1 = %{version}-%{release}
+Requires:	librados2 = %{version}-%{release}
+Requires:	libcephfs2 = %{version}-%{release}
+Requires:	python-rados = %{version}-%{release}
+Requires:	python-rbd = %{version}-%{release}
+Requires:	python-cephfs = %{version}-%{release}
+Requires:	python-rgw = %{version}-%{release}
 %if 0%{?fedora} || 0%{?rhel}
 Requires:	python-prettytable
 %endif
