--- a/src/ceph.in
+++ b/src/ceph.in
@@ -32,6 +32,9 @@ except NameError:
 
 CEPH_GIT_VER="@CEPH_GIT_VER@"
 CEPH_GIT_NICE_VER="@CEPH_GIT_NICE_VER@"
+CEPH_RELEASE="@CEPH_RELEASE@"
+CEPH_RELEASE_NAME="@CEPH_RELEASE_NAME@"
+CEPH_RELEASE_TYPE="@CEPH_RELEASE_TYPE@"
 
 # Flags from src/mon/Monitor.h
 FLAG_NOFORWARD  = (1 << 0)
@@ -780,7 +783,11 @@ def main():
     parser, parsed_args, childargs = parse_cmdargs()
 
     if parsed_args.version:
-        print('ceph version {0} ({1})'.format(CEPH_GIT_NICE_VER, CEPH_GIT_VER))  # noqa
+        print('ceph version {0} ({1}) {2} ({3})'.format(
+            CEPH_GIT_NICE_VER,
+            CEPH_GIT_VER,
+            CEPH_RELEASE_NAME,
+            CEPH_RELEASE_TYPE))  # noqa
         return 0
 
     global verbose
