build/ops: use .sx for PPC assembler file that needs preprocessor
This fixes the ppc64le build which was broken by e1c3985148869c55b3725e208ec3bc5acf5fceae

Fixes: http://tracker.ceph.com/issues/20106
Signed-off-by: Tim Serong <tserong@suse.com>
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -544,7 +544,7 @@ if(HAVE_INTEL)
 elseif(HAVE_POWER8)
   list(APPEND libcommon_files
     common/crc32c_ppc.c
-    common/crc32c_ppc_asm.s)
+    common/crc32c_ppc_asm.sx)
 endif(HAVE_INTEL)
 
 if(LINUX)
