erasure-code: Remove duplicate of isa-l files
There are two copies of isa-l. While one is a git submodule the other
was a static copy from an older version. This change helps with removing
the duplicate and maintain a single copy.
This is also upgrading isa-l used by (src/erasure-code/isa/isa-l) from
v2.14 to v2.16.0

Signed-off-by: Ganesh Mahalingam <ganesh.mahalingam@intel.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -115,8 +115,8 @@ else(no_yasm)
       message(STATUS " we are not x32")
       set(HAVE_GOOD_YASM_ELF64 1)
       execute_process(COMMAND yasm -f elf64 -i
-        ${CMAKE_SOURCE_DIR}/src/erasure-code/isa/isa-l/include/
-        ${CMAKE_SOURCE_DIR}/src/erasure-code/isa/isa-l/erasure_code/gf_vect_dot_prod_avx2.asm.s
+        ${CMAKE_SOURCE_DIR}/src/isa-l/include/
+        ${CMAKE_SOURCE_DIR}/src/isa-l/erasure_code/gf_vect_dot_prod_avx2.asm
         -o /dev/null
         RESULT_VARIABLE rc
         OUTPUT_QUIET)
