--- a/src/erasure-code/isa/CMakeLists.txt
+++ b/src/erasure-code/isa/CMakeLists.txt
@@ -1,49 +1,49 @@
 # ISA
-
-include_directories(isa-l/include)
+set(isal_src_dir ${CMAKE_SOURCE_DIR}/src/isa-l)
+include_directories(${isal_src_dir}/include)
 
 set(isa_srcs
-  isa-l/erasure_code/ec_base.c
-  isa-l/erasure_code/gf_2vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_3vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_4vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_5vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_6vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_vect_dot_prod_sse.asm.s
-  isa-l/erasure_code/gf_2vect_mad_avx2.asm.s
-  isa-l/erasure_code/gf_3vect_mad_avx2.asm.s
-  isa-l/erasure_code/gf_4vect_mad_avx2.asm.s
-  isa-l/erasure_code/gf_5vect_mad_avx2.asm.s
-  isa-l/erasure_code/gf_6vect_mad_avx2.asm.s
-  isa-l/erasure_code/gf_vect_mad_avx2.asm.s
-  isa-l/erasure_code/ec_highlevel_func.c
-  isa-l/erasure_code/gf_2vect_mad_avx.asm.s
-  isa-l/erasure_code/gf_3vect_mad_avx.asm.s
-  isa-l/erasure_code/gf_4vect_mad_avx.asm.s
-  isa-l/erasure_code/gf_5vect_mad_avx.asm.s
-  isa-l/erasure_code/gf_6vect_mad_avx.asm.s
-  isa-l/erasure_code/gf_vect_mad_avx.asm.s
-  isa-l/erasure_code/ec_multibinary.asm.s
-  isa-l/erasure_code/gf_2vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_3vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_4vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_5vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_6vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_vect_mad_sse.asm.s
-  isa-l/erasure_code/gf_2vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_3vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_4vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_5vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_6vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_vect_dot_prod_avx2.asm.s
-  isa-l/erasure_code/gf_vect_mul_avx.asm.s
-  isa-l/erasure_code/gf_2vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_3vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_4vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_5vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_6vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_vect_dot_prod_avx.asm.s
-  isa-l/erasure_code/gf_vect_mul_sse.asm.s
+  ${isal_src_dir}/erasure_code/ec_base.c
+  ${isal_src_dir}/erasure_code/gf_2vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_vect_dot_prod_sse.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mad_avx2.asm
+  ${isal_src_dir}/erasure_code/ec_highlevel_func.c
+  ${isal_src_dir}/erasure_code/gf_2vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mad_avx.asm
+  ${isal_src_dir}/erasure_code/ec_multibinary.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mad_sse.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_vect_dot_prod_avx2.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mul_avx.asm
+  ${isal_src_dir}/erasure_code/gf_2vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_3vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_4vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_5vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_6vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_vect_dot_prod_avx.asm
+  ${isal_src_dir}/erasure_code/gf_vect_mul_sse.asm
   ErasureCodeIsa.cc
   ErasureCodeIsaTableCache.cc
   ErasureCodePluginIsa.cc
