qa/suites/rados/basic/repair_test: skip final scrub
OSD is deliberately damaged; scrub will fail.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/qa/suites/rados/basic/tasks/repair_test.yaml
+++ b/qa/suites/rados/basic/tasks/repair_test.yaml
@@ -1,5 +1,6 @@
 overrides:
   ceph:
+    wait-for-scrub: false
     log-whitelist:
       - candidate had a stat error
       - candidate had a read error
