build/ops: rpm: add which as a build dependency, unconditionally
Although "which" is only used in the tests, we need the dependency
to be picked up by install-deps.sh.

This is a stopgap measure until we can get rid of the dependency entirely by
replacing "which" with "type -P" in the tests.

Fixes: http://tracker.ceph.com/issues/20127
Signed-off-by: Nathan Cutler <ncutler@suse.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -135,6 +135,7 @@ BuildRequires:	snappy-devel
 BuildRequires:	udev
 BuildRequires:	util-linux
 BuildRequires:	valgrind-devel
+BuildRequires:	which
 BuildRequires:	xfsprogs
 BuildRequires:	xfsprogs-devel
 BuildRequires:	xmlstarlet
