ceph.spec.in: add python-pecan as BuildDepends too
For install-deps.sh's benefit.

Signed-off-by: Sage Weil <sage@redhat.com>

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -128,8 +128,10 @@ BuildRequires:	pkgconfig
 BuildRequires:	python
 BuildRequires:	python-devel
 BuildRequires:	python-nose
+BuildRequires:	python-pecan
 BuildRequires:	python-requests
 BuildRequires:	python-virtualenv
+BuildRequires:	python-werkzeug
 BuildRequires:	snappy-devel
 BuildRequires:	udev
 BuildRequires:	util-linux
