selinux: Install ceph-base before ceph-selinux
We need to have ceph-base installed before ceph-selinux to use ceph-disk
in %post script. The default ordering is random and so the installation
randomly failed to relabel the files.

Fixes: http://tracker.ceph.com/issues/20184
Signed-off-by: Boris Ranto <branto@redhat.com>
(cherry picked from commit e69086645d3411a2ed781609b670eb5f16ac4810)
Conflicts:
	ceph.spec.in: No _epoch_prefix in kraken.

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -654,6 +654,7 @@ Summary:	SELinux support for Ceph MON, OSD and MDS
 Group:		System Environment/Base
 Requires:	ceph-base = %{epoch}:%{version}-%{release}
 Requires:	policycoreutils, libselinux-utils
+Requires(post):	ceph-base = %{epoch}:%{version}-%{release}
 Requires(post): selinux-policy-base >= %{_selinux_policy_version}, policycoreutils, gawk
 Requires(postun): policycoreutils
 %description selinux
