compressor/qatzip: add qatzip compressor
Use Intel Hardware to do compress/decompress.

Signed-off-by: Jianpeng Ma <jianpeng.ma@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -217,6 +217,12 @@ if(WITH_SPDK)
   set(HAVE_SPDK TRUE)
 endif(WITH_SPDK)
 
+option(WITH_QATZIP "Enable QATZIP" OFF)
+if(WITH_QATZIP)
+  find_package(qatzip REQUIRED)
+  set(HAVE_QATZIP ${QATZIP_FOUND})
+endif(WITH_QATZIP)
+
 # needs mds and? XXX
 option(WITH_LIBCEPHFS "libcephfs client library" ON)
 
