--- a/src/compressor/CMakeLists.txt
+++ b/src/compressor/CMakeLists.txt
@@ -11,15 +11,34 @@ set(compressor_plugin_dir ${CMAKE_INSTALL_PKGLIBDIR}/compressor)
 add_subdirectory(snappy)
 add_subdirectory(zlib)
 add_subdirectory(zstd)
+if(HAVE_QATZIP)
+add_subdirectory(qatzip)
+endif()
 
-add_custom_target(compressor_plugins DEPENDS
-    ceph_snappy
-    ceph_zlib
-    ceph_zstd)
+set(ceph_compressor_libs
+  ceph_snappy
+  ceph_zlib
+  ceph_zstd)
+if(HAVE_QATZIP)
+  list(APPEND ceph_compressor_libs ceph_qatzip)
+endif()
+
+add_custom_target(compressor_plugins DEPENDS ${ceph_compressor_libs})
+
 
 if(WITH_EMBEDDED)
   include(MergeStaticLibraries)
   add_library(cephd_compressor_base STATIC ${compressor_srcs})
   set_target_properties(cephd_compressor_base PROPERTIES COMPILE_DEFINITIONS BUILDING_FOR_EMBEDDED)
-  merge_static_libraries(cephd_compressor cephd_compressor_base cephd_compressor_snappy cephd_compressor_zlib cephd_compressor_zstd)
+  set(cephd_compressor_libs
+    cephd_compressor_base
+    cephd_compressor_snappy
+    cephd_compressor_zlib
+    cephd_compressor_zstd)
+
+  if(HAVE_QATZIP)
+    list(APPEND cephd_compressor_libs cephd_compressor_qatzip)
+  endif()
+
+  merge_static_libraries(cephd_compressor ${cephd_compressor_libs})
 endif()
