DNM!!!! Revert "build/ops: rpm: gperftools-devel >= 2.4"
This reverts commit 295f56a94c6980aa52c19a0ed167e6298c3a0d8e.

--- a/ceph.spec.in
+++ b/ceph.spec.in
@@ -110,7 +110,7 @@ BuildRequires:	fuse-devel
 BuildRequires:	gcc-c++
 BuildRequires:	gdbm
 %if 0%{with tcmalloc}
-BuildRequires:	gperftools-devel >= 2.4
+BuildRequires:	gperftools-devel
 %endif
 BuildRequires:  jq
 BuildRequires:	leveldb-devel > 1.2
